css/style.css
*{
    box-sizing: border-box;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    margin:0;
    padding: 0;
}

h1{
    color: green;
}

body{
    background-image: url(/images/standrews.jpg);
    background-size: cover;
}

.header-container{
    display: flex;
    justify-content: space-between;
    margin: 3em 3em;
}

footer {
    display: flex;
    justify-content: space-evenly;
    padding-bottom: 2em;
    color: darkgreen;
    font-weight: bold;

}
.footer-container a{
    text-decoration: none;
    color: seagreen;
    padding: .25em .25em
}

/* .footer-container a:hover{
    background-color: springgreen;
} */

.main-container{
    width: 80%;
    margin: 2em auto;
    background-color: rgba(101, 121, 101, 0.4);

    display: grid;
    grid-template-rows: repeat(5, auto);
    grid-row-gap: 2em;
/*    grid-column-gap: 2em ; */
    padding: 2em 2em;
}

.aboutme-container{
    display: flex;
    color: whitesmoke;
    justify-content: space-around;
    padding-left: 2em;
    padding-right: 2em;
}

.myBioLinks{
    display: flex;
    justify-content: space-around;
    padding-top: 2em;
    color: darkgreen;
    font-weight: bold;
}

.myBioLinks a{
    text-decoration: none;
    color: seagreen;
    padding: .25em .25em
}

.myBioLinks a:hover{
    background-color: springgreen;
}

.main-container li{
    list-style: none;
}

.main-container h3{
    color: rgb(3,71,9);
}

.main-container h4{
    color: rgb(5, 24, 5);
}

.myprojects-container{
    display: flex;
    justify-content: space-between;
}

.nav-container{
    display: flex;
    flex-direction: row;
}

.nav-container a{
    text-decoration: none;
    color: seagreen;
    padding: .25em .25em
}

.nav-container a:hover{
    background-color: springgreen;
}

.techskills-container{
    display: flex;
    align-items: center;
    padding-left: 2em;
    padding-right: 2em;
    color: whitesmoke;
}

